[project]
name = "rt-rabbitmq-wrapper"
version = "1.0.0"
description = "This project contains a wrapper for accessing RabbitMQ exchange from The Runtime Monitor constellation of tools."
authors = [
  {name = "Carlos Gustavo Lopez Pombo", email = "clpombo@gmail.com"}
]
license = "SPDX-License-Identifier: AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11,<4.0"
packages = [
    { include = "rt_rabbitmq_wrapper"},
]
dependencies = [
    "pika (~=1.3.2)",
    "pika-stubs (~=0.1.3)",
    "pip (~=25.1.1)",
    "poetry-core (~=2.1.3)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
